# keeprising

./: .gitignore  Hello.py  README.md  chart_creation.ipynb  chart_creation.py  dummy.py  dummy_data_creation.ipynb  environment-keeprising.yml  keeprising.py  pyproject.toml
.ipynb_checkpoints/: chart_creation-checkpoint.ipynb  test_2-checkpoint.py
backend/: main.py
common/: calendar.py  config.py  generate.py  prompts.py
data/: baked_bread.csv
docs/: test_questions.md  todo.md
frontend/: gradio_frontend.py
notebooks/: backend_test.ipynb  dummy_data_creation.ipynb
notebooks/experimental/: chart_creation.ipynb  chatbot.ipynb
old/: Hello.py  dummy_data_creation.ipynb  environment-keeprising.yml  utils.py
old/experimental/: chart_creation.ipynb  tool_experiments.ipynb  utils1.py
old/pages/: 1_Feeding.py  2_Baking.py
pages/: 1_Feeding.py  2_Baking.py  3_Dashboard.py  4_Troubles.py  Baking.py  Dashboard.py  Feeding.py  Troubles.py  keeprising_dashboard.py
utils/: utils.py
